[package]
name = "anchor_swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.22.1"}
anchor-spl = {version = "0.22.1"}
arrayref = "0.3.6"
solana-program = "1.10.0"
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.3"

[dev-dependencies]
roots = "0.0.7"

